# fastapi-basekit

./: .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  marketplace.json  mkdocs.yml  plugin.json  pyproject.toml  pytest.ini  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docs.yml  lint-commits.yml  publish.yml  release.yml  tests.yml
0.3/: 404.html  index.html  sitemap.xml
0.3/assets/: extra.css
0.3/changelog/: index.html
0.3/contributing/: index.html
0.3/development/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html  sitemap.xml
0.4/changelog/: index.html
0.4/contributing/: index.html
0.4/development/: index.html
0.4/overrides/: main.html
0.4/search/: search_index.json
0.5/: 404.html  index.html  sitemap.xml
0.5/assets/: mermaid-init.js
0.5/changelog/: index.html
0.5/contributing/: index.html
0.5/development/: index.html
0.5/pagination-extension-points/: index.html
0.5/search/: search_index.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/contributing/: index.html
dev/development/: index.html
dev/pagination-extension-points/: index.html
dev/search/: search_index.json
docs/: changelog.md  contributing.md  development.md  index.md  pagination-extension-points.md
docs/advanced/: configuration.md  logging.md  performance.md  permissions.md  soft-deletes.md
docs/api-reference/: base-controller.md  base-repository.md  base-service.md  exceptions.md  schemas.md  sqlalchemy-controller.md
docs/examples/: authentication.md  basic-crud.md  complex-filters.md  relationships.md
docs/getting-started/: configuration.md  first-crud.md  installation.md
docs/overrides/: main.html
docs/user-guide/: controllers.md  filtering.md  ordering.md  pagination.md  repositories.md  search.md  services.md  validation.md
examples/: README.md  __init__.py
examples/advanced_queryset/: __init__.py  controller.py  models.py  repository.py  schemas.py  service.py
examples/simple_crud/: __init__.py  controller.py  models.py  repository.py  schemas.py  service.py
examples/with_permissions/: __init__.py  controller.py  models.py  permissions.py  schemas.py  service.py
examples/with_relations/: __init__.py  controller.py  models.py  repository.py  schemas.py  service.py
fastapi/exceptions/: api_exceptions.py  handler.py
fastapi_basekit/: __init__.py  openapi.py
fastapi_basekit/aio/: __init__.py
fastapi_basekit/cli/: __init__.py  main.py
fastapi_basekit/exceptions/: __init__.py  domain.py  handler.py
fastapi_basekit/schema/: base.py
fastapi_basekit/servicios/: __init__.py
fastapi_toolkit/: __init__.py
scripts/: release.py
servicios/thrid/: jwt.py  storage.py
tests/: conftest.py  test_action_param_leak.py  test_api_exceptions.py  test_base_response.py  test_base_service.py  test_beanie_aggregation_hooks.py  test_beanie_aggregation_integration.py  test_beanie_keyset_pagination.py  test_beanie_repository_regression.py  test_beanie_service_mutable_defaults.py  test_beanie_service_regression.py  test_controller_auto_permissions.py  test_crud_beanie_controller.py  test_crud_controller.py  test_crud_sqlmodel_repository_service.py  test_exception_handlers.py  test_filter_operators.py  test_generics_optional_and_cache.py  test_generics_wiring.py  test_jwt_config_robustness.py  test_jwt_service.py  test_openapi_simplify.py  test_params_classification.py  test_params_coercion_matrix.py  test_params_coercion_unit.py  test_params_http_matrix_beanie.py  test_params_http_matrix_sqlalchemy.py  test_params_rich_type_coercion.py  test_path_filter_mixin_compat.py  test_post_process_list_hook.py  test_pulbot_cbv_pattern_beanie.py  test_repo_signature_aliases.py  test_sql_queryset_override.py  test_sqlalchemy_base_service_order.py  test_sqlalchemy_repository_regression.py  test_sqlalchemy_service_regression.py  test_sqlmodel_filter_operators.py  test_typed_filter_coercion.py
tests/example_crud/: __init__.py  controller.py  models.py  repository.py  (+2 more)
(+180 files in other folders)
