[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-basekit"
version = "0.1.0-rc1"
description = "Utilities and base classes for FastAPI async projects using Beanie ODM"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Jerson Moreno", email = "jerson.ml820@hotmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.116.1",
    "SQLAlchemy[asyncio]==2.0.43",
    "psycopg2==2.9.10",
    "pydantic==2.11.7",
    "fastapi-restful[all]==0.6.0",

]

[project.urls]
Homepage = "https://github.com/mundobien2025/fastapi-basekit.git"
