[build-system]
requires = ["setuptools>=67,<74", "wheel<0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-basekit"
version = "0.3.3"
description = "Utilities and base classes for FastAPI async projects (Beanie, SQLAlchemy or SQLModel)"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  {name = "Jerson Moreno", email = "jerson.ml820@hotmail.com"}
]

license = {text = "MIT"}

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "fastapi>=0.116.1",
  "pydantic>=2.13.0,<3",
  "fastapi-restful[all]>=0.6.0",
  "pyjwt>=2.12.1",
]

[tool.setuptools]
packages = { find = { include = ["fastapi_basekit*"] } }

[tool.setuptools.package-data]
fastapi_basekit = [
  "templates/project/cookiecutter.json",
  "templates/project/{{cookiecutter.project_slug}}/**/*",
  "templates/project/{{cookiecutter.project_slug}}/.gitignore",
  "templates/project/{{cookiecutter.project_slug}}/.env.example",
]

[project.scripts]
basekit = "fastapi_basekit.cli:main"

[project.optional-dependencies]
beanie = [
  "beanie>=2.0,<3",
]
sqlalchemy = [
  "SQLAlchemy[asyncio]>=2.0.30,<3",
  "psycopg2>=2.9.0",
]
sqlmodel = [
  "sqlmodel>=0.0.37",
]
init = [
  "cookiecutter>=2.5.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.27.0",
  "pymdown-extensions>=10.10",
  "mike>=2.1.0",
]
all = [
  "beanie>=2.0,<3",
  "SQLAlchemy[asyncio]>=2.0.30,<3",
  "psycopg2>=2.9.0",
  "sqlmodel>=0.0.37",
  "cookiecutter>=2.5.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/mundobien2025/fastapi-basekit"
Repository = "https://github.com/mundobien2025/fastapi-basekit"
Issues = "https://github.com/mundobien2025/fastapi-basekit/issues"
